# aws-lambda-events

./: .gitignore  .gitpod.yml  404.html  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  python.yml
alb/: index.html
alexa-skills-kit/: index.html
alexa-smart-home/: index.html
amazon-msk/: index.html
apache-kafka/: index.html
appsync-authorizer/: index.html
appsync-resolver/: index.html
build-project/: index.html
cloudformation/: index.html
cloudfront-function/: index.html
cloudfront-lambda-edge/: index.html
cloudwatch-logs/: index.html
code-commit/: index.html
code-pipeline-job/: index.html
cognito-events/: index.html
cognito-user-pool/: index.html
config/: index.html
connect/: index.html
docs/: 404.md  CNAME  alb.md  alex-smart-home.md  alexa-skills-kit.md  alexa-smart-home.md  amazon-msk.md  apache-kafka.md  api-customer-authorizer-http.md  api-customer-authorizer-rest.md  api-http-api.md  api-rest.md  appsync-authorizer.md  appsync-resolver.md  build-project.md  cloudformation.md  cloudfront-function.md  cloudfront-lambda-edge.md  cloudwatch-logs.md  code-commit.md  code-pipeline-job.md  code-pipeline.md  cognito-events.md  cognito-user-pool.md  cognito.md  config.md  connect.md  dynamodb.md  ec2.md  event-bridge.md  function-url.md  general-resources.md  http-api-custom-authorizer.md  http-api.md  index.md  iot-events.md  iot.md  kinesis-firehose.md  kinesis-streams.md  lambda-context.md  (+19 more)
dynamodb/: index.html
event-bridge/: index.html
event-schema/: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  generate-test-event  mypy.ini  publish-shared-event  publish-shared-event.sh  pyproject.toml  setup.py
event-schema/aws_lambda_publish_shared_event/: __main__.py  util.py
event-schema/aws_lambda_publish_shared_event/generate_test_event/: __main__.py
event-schema/src/: appsync-authorizer.json  main.py  setup.py
event-schema/src/aws_lambda_publish_shared_event/: __main__.py
event-schema/tests/: test.json  test2.json  test_generate_test_event.py  test_main.py
events/alexa-skills-kit/: intent-answer.json  intent-getnewfact.json  intent-recipe.json
events/amazon-config/: amazon-config.json
events/amazon-mq/: active-mq.json  rabbit-mq.json
events/amazon-msk/: amazon-msk-1.json
events/apache-kafka/: apache-kafka.json
events/api-gateway/: api-gateway-authorizer-format-1.json  api-gateway-authorizer-format-2.json
events/appsync/: appsync-authorizer.json
events/cloudformation/: cloudformation-delete.json
events/cloudfront-lambda-edge/: origin-request.json  viewer-request.json
events/cloudwatch-events/: amazon-augmented-ai.json  amazon-chime-voice-connector-streaming-ends.json  amazon-chime-voice-connector-streaming-starts.json  amazon-chime-voice-connector-streaming-updates.json  amazon-cloudwatch-anomaly-detection-alarm.json  amazon-cloudwatch-schuduled-event.json  amazon-cloudwatch-single-metric-alarm.json  amazon-ec2-autoscale-instance-launch-lifecycle-action.json  amazon-ec2-autoscale-instance-launch-successful.json  amazon-ec2-ebs-create-volume.json  amazon-ec2-state-change.json  amazon-ecr-completed-image-scan-enhanced.json  amazon-ecr-completed-push.json  aws-batch-job-state-change.json  aws-codebuild-phase-change.json  aws-codebuild-state-change.json  aws-codecommit-approvalRuleTemplateBatchAssociatedWithRepositories.json  aws-codecommit-approvalRuleTemplateBatchDisassociatedFromRepositories.json  aws-codecommit-approvalRuleTemplateCreated.json  aws-codecommit-approvalRuleTemplateDeleted.json  aws-codecommit-approvalRuleTemplateDisassociatedWithRepository.json  aws-codecommit-approvalRuleTemplateUpdated.json  aws-codecommit-commentOnCommitCreated.json  aws-codecommit-commentOnCommitUpdated.json  aws-codecommit-commentOnPullRequestCreated.json  aws-codecommit-commentOnPullRequestUpdated.json  aws-codecommit-pullRequestApprovalRuleOverridden.json  aws-codecommit-pullRequestApprovalRuleUpdated.json  aws-codecommit-pullRequestApprovalStateChanged.json  aws-codecommit-pullRequestCreated.json  aws-config.json  (+15 more)
function-url/: index.html
http-api/: index.html
http-api-custom-authorizer/: index.html
iot/: index.html
iot-events/: index.html
kinesis-firehose/: index.html
kinesis-streams/: index.html
lambda-context/: index.html
lambda-invoke-types/: index.html
lambda-lifecycle/: index.html
lambda-resources/: index.html
lambda-security/: index.html
lex/: index.html
lex-v2/: index.html
mq/: index.html
rest-api/: index.html
rest-api-custom-authorizer/: index.html
s3/: index.html
s3-batch/: index.html
s3-object-lambda/: index.html
search/: search_index.json
secrets-manager/: index.html
ses/: index.html
sns/: index.html
sqs/: index.html
work-mail/: index.html
(+62 files in other folders)
